# goit-pythonweb-hw-10

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile.txt  project_structure.md  pyproject.toml
alembic/: env.py  readme.md
app/: __init__.py  auth.py  cloudinary_service.py  crud.py  database.py  email.py  main.py  models.py  rate_limiter.py  schemas.py
app/routers/: __init__.py  auth.py  contacts.py
scripts/: seed_data.py
tests/: __init__.py  conftest.py  test_auth.py  test_contacts.py
